--- a/composer.json
+++ b/composer.json
@@ -21,14 +21,14 @@
     }
   },
   "require": {
-    "php": "^7.1",
-    "illuminate/support": "^5.6|^6.0|^7.0|^8.0",
+    "php": "^8.0",
+    "illuminate/support": "^9.0",
     "ext-json": "*",
     "league/fractal": "^0.17.0"
   },
   "require-dev": {
-    "orchestra/testbench": "~3.0",
-    "phpunit/phpunit": "^7.5"
+    "orchestra/testbench": "^7.3",
+    "phpunit/phpunit": "^9.5"
   },
   "minimum-stability": "dev",
   "extra": {
