Add support for illuminate/support package 10-12

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
   },
   "require": {
     "php": "^8.0",
-    "illuminate/support": "^9.0",
+    "illuminate/support": "^9.0|^10.0|^11.0|^12.0",
     "ext-json": "*",
     "league/fractal": "^0.17.0",
     "laravel/legacy-factories": "1.x-dev"
