--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
     "php": "^8.0",
     "illuminate/support": "^9.0|^10.0|^11.0|^12.0",
     "ext-json": "*",
-    "league/fractal": "^0.17.0",
-    "laravel/legacy-factories": "1.x-dev"
+    "league/fractal": "^0.17.0|^0.20.2",
+    "laravel/legacy-factories": "1.x-dev|"
   },
   "require-dev": {
     "orchestra/testbench": "^7.3",
