--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "illuminate/support": "^9.0|^10.0|^11.0|^12.0",
     "ext-json": "*",
     "league/fractal": "^0.17.0|^0.20.2",
-    "laravel/legacy-factories": "1.x-dev|"
+    "laravel/legacy-factories": "1.x-dev"
   },
   "require-dev": {
     "orchestra/testbench": "^7.3",
